--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marília Di Credico</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,10 +14,8 @@
         <p>Especialista em Sobrancelhas Unissex</p>
     </header>
     <nav>
-        <a href="#">Home</a>
-        <a href="historia.html">Biografia</a>
-        <a href="localizacao.html">Localização</a>
-        <a href="contato.html">Contato</a>
+        <a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank">Conheça nosso Instagram</a>
+        <a href="https://api.whatsapp.com/message/YAXDMVDQT3F5O1" target="_blank">Fale conosco via Whatsapp</a>
     </nav>
     <main>
         <article>
@@ -39,8 +38,8 @@
                 <p>Para falar conosco basta acessar nossas redes sociais abaixo ou enviar mensagem pelo numero do whatsapp:</p>
                 <ul>
                     <li><a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank">Instagram</a></li>
-                    <li>WhatsApp 71 98778-6846</li>
-                    <li>Facebook</li>
+                    <li><a href="https://api.whatsapp.com/message/YAXDMVDQT3F5O1" target="_blank">Fale conosco via Whatsapp</a></li>
+                    <li><a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank">Instagram</a></li>
                 </ul>
             </aside>
         </article>
