--- a/index.html
+++ b/index.html
@@ -45,5 +45,8 @@
             </aside>
         </article>
     </main>
+    <footer>
+        <p>Site Desenvolvido por Renan Clemonini todos os direitos reservados.</p>
+    </footer>
 </body>
 </html>
