--- a/index.html
+++ b/index.html
@@ -30,6 +30,22 @@
             <br>
             <hr>
 
+            <h2>Serviços Oferecidos</h2>
+            <br>
+            <ul>
+                <li>Design de Sobrancelhas (Com e Sem Henna)</li>
+                <li>Extensão em Cílios Fio a Fio (variadas técnicas)</li>
+                <li>Micropigmentação de Sobrancelhas, Lábios e Olhos</li>
+                <li>Despigmentação</li>
+                <li>Correção de Micropigmentação Antiga</li>
+                <li>Tratamento para redução de flacidez facial</li>
+                <li>Remoção de Dermatose Papulosa Nigra</li>
+            </ul>
+            <br>
+
+            <br>
+            <hr>
+
             <h2>Localização</h2>
             <p>Estamos localizados na Avenida Praia de Itapuã, 276 no Mini Shopping 'Lumiar Work Center', na sala 4B (HarmonPelle)</p>
 
@@ -37,11 +53,11 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15557.58734089737!2d-38.3041464!3d-12.8821851!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa782f5e2fa53f7b2!2sMar%C3%ADlia%20Di%20Credico%20-%20Especialista%20em%20Sobrancelhas%20Unissex!5e0!3m2!1spt-BR!2sbr!4v1653165193764!5m2!1spt-BR!2sbr" width="780" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             <hr>
-            <img src="imagens/instagram.png" alt="Instagram QR Code">
-            <h3>&uarr; Acesso ao Instagram via QR Code &uarr;</h3>
-            
-            <img src="imagens/whatsapp.png" alt="WhatApp QR Code">
-            <h3>&uarr; Acesso ao WhatsApp via QR Code &uarr;</h3>
+
+            <h2>Instagram e WhatsApp Via QR Code</h2>
+            <img class="qr" src="imagens/instagram.png" alt="Instagram QR Code">
+
+            <img class="qr" src="imagens/whatsapp.png" alt="WhatApp QR Code">
 
             <br>
             <hr>
@@ -50,8 +66,8 @@
                 <p>Para falar conosco basta clicar no link de nossas redes sociais abaixo ou enviar mensagem pelo numero do whatsapp 71 98778-6846</p>
                 <ul>
                     <li><a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank">Instagram</a></li>
-                    <li><a href="https://api.whatsapp.com/message/YAXDMVDQT3F5O1" target="_blank">Fale conosco via Whatsapp</a></li>
                     <li><a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank">Instagram</a></li>
+                    <li><a href="https://api.whatsapp.com/message/YAXDMVDQT3F5O1" target="_blank">Fale conosco via Whatsapp</a></li>
                 </ul>
             </aside>
         </article>
