update saturday morning

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <p>Especialista em Sobrancelhas Unissex</p>
     </header>
     <nav>
-        <a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank">Conheça nosso Instagram</a>
-        <a href="https://api.whatsapp.com/message/YAXDMVDQT3F5O1" target="_blank">Fale conosco via Whatsapp</a>
+        <a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank">Visite nosso Instagram</a>
+        <a href="https://api.whatsapp.com/message/YAXDMVDQT3F5O1" target="_blank">Fale Conosco via Whatsapp</a>
     </nav>
     <main>
         <article>
@@ -54,10 +54,11 @@
             </div>
             <hr>
 
-            <h2>Instagram e WhatsApp Via QR Code</h2>
-            <img class="qr" src="imagens/instagram.png" alt="Instagram QR Code">
-
-            <img class="qr" src="imagens/whatsapp.png" alt="WhatApp QR Code">
+            <div class="qrcode">
+                <h2>Instagram e WhatsApp Via QR Code</h2>
+                <img class="qr" src="imagens/instagram.png" alt="Instagram QR Code">
+                <img class="qr" src="imagens/whatsapp.png" alt="WhatApp QR Code">
+            </div>
 
             <br>
             <hr>
