--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 </head>
 <body>
     <header>
-        <h1>Marília Di Credico</h1>
-        <p>Especialista em Sobrancelhas Unissex</p>
+        <div class="bg">
+
+        </div>
     </header>
     <nav>
         <a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank">Visite nosso Instagram</a>
