--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="bg">
+        <div>
 
         </div>
     </header>
@@ -55,21 +55,24 @@
             </div>
             <hr>
 
-            <div class="qrcode">
+            <div>
                 <h2>Instagram e WhatsApp Via QR Code</h2>
-                <img class="qr" src="imagens/instagram.png" alt="Instagram QR Code">
-                <img class="qr" src="imagens/whatsapp.png" alt="WhatApp QR Code">
-            </div>
+                <div class="qrcode" id="ig">
+                    <img src="imagens/instagram.png" alt="Instagram QR Code">
+                </div>
+
+                <div class="qrcode" id="wpp">
+                    <img src="imagens/whatsapp.png" alt="WhatApp QR Code"></div>
+                </div>
 
             <br>
             <hr>
             <aside>
                 <h2>Contato</h2>
-                <p>Para falar conosco basta clicar no link de nossas redes sociais abaixo ou enviar mensagem pelo numero do whatsapp 71 98778-6846</p>
+                <p>Pedimos encarecidamente que dêem prefrencia pelo contato via whatsapp 71 98778-6846</p>
                 <ul>
+                    <li><a href="https://api.whatsapp.com/message/YAXDMVDQT3F5O1" target="_blank">Link direto Whatsapp</a></li>
                     <li><a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank">Instagram</a></li>
-                    <li><a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank">Instagram</a></li>
-                    <li><a href="https://api.whatsapp.com/message/YAXDMVDQT3F5O1" target="_blank">Fale conosco via Whatsapp</a></li>
                 </ul>
             </aside>
         </article>
