--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
 </head>
 <body>
     <header>
-        <div>
-
-        </div>
+        <h1>Marília Di Credico</h1>
+        <p>Especialista em Sobrancelhas Unissex</p>
     </header>
     <nav>
         <a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank">Visite nosso Instagram</a>
