--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
         
     </header>
     <nav>
-        <a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank">Visite nosso Instagram</a>
-        <a href="https://api.whatsapp.com/message/YAXDMVDQT3F5O1" target="_blank">Fale Conosco via Whatsapp</a>
+        <ul>
+            <li><a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank"> Visite nosso Instagram</a></li>
+            <li><a href="https://api.whatsapp.com/message/YAXDMVDQT3F5O1" target="_blank">Fale Conosco via Whatsapp</a></li>
+        </ul>
     </nav>
     <main>
         <article>
