Revert "atualizações que deram errado"
This reverts commit 056a0dff59326cfb9effbe188b71af1d59612eef.

--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
         
     </header>
     <nav>
-        <ul>
-            <li><a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank"> Visite nosso Instagram</a></li>
-            <li><a href="https://api.whatsapp.com/message/YAXDMVDQT3F5O1" target="_blank">Fale Conosco via Whatsapp</a></li>
-        </ul>
+        <a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank">Visite nosso Instagram</a>
+        <a href="https://api.whatsapp.com/message/YAXDMVDQT3F5O1" target="_blank">Fale Conosco via Whatsapp</a>
     </nav>
     <main>
         <article>
