--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             
             <aside>
                 <h2>Contato</h2>
-                <p>Pedimos encarecidamente que dêem preferência pelo contato via whatsapp <a class="dentro" href="https://api.whatsapp.com/message/YAXDMVDQT3F5O1" target="_blank">71 98778-6846</a></p>
+                <p>Pedimos encarecidamente que dêem preferência pelo contato via whatsapp <a class="dentro" href="https://api.whatsapp.com/message/YAXDMVDQT3F5O1" target="_blank">71 98778-6846&#x1F517</a></p>
             </aside>
         </article>
     </main>
