--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="txt">
                 <h2>Biografia</h2>
                 <p>Marilia Di Credico nasceu em 23 de março de 1987, baiana do bairro de Portão em Lauro de Freitas, começou com Design em Sobrancelhas no ano de 2015.</p>
-                <p>Por intemédio de familiares, se firmou na área de beleza se tornando especialista em sobrancelhas e transformações de estética facial como maquiagem, micropigmentação de sobrancelhas e lábios, revitalização e neutralização labial, extensão em cílios, camuflagem e despigmentação. A arte da colorimetria fez com que se apaixonasse por estes efeitos tonalizantes que realçam a beleza de suas clientes, utilizando as técnicas esfumadas e degrade, procura sempre a consciente utilização do tom de pigmento que se aproxime ao tom de pele.</p>
+                <p>Por intemédio de familiares, se firmou na área de beleza se tornando especialista em sobrancelhas e transformações de estética facial como maquiagem, micropigmentação de sobrancelhas, olhos e lábios, revitalização e neutralização labial, extensão em cílios, camuflagem e despigmentação. A arte da colorimetria fez com que se apaixonasse por estes efeitos tonalizantes que realçam a beleza de suas clientes, utilizando as técnicas esfumadas e degrade, procura sempre a consciente utilização do tom de pigmento que se aproxime ao tom de pele.</p>
                 <p>Durante estes anos a partir de 2015, Marilia vem se aprimorando e adquirindo mais conhecimento através de muito estudo e experiências vividas, onde criou técnicas que são simples e fáceis de se aplicar e que vem gerando frutos que são confiança e segurança de suas clientes perante ao trabalho de excelencia feito.</p>
             </div>
 
@@ -62,7 +62,7 @@
             
             <aside>
                 <h2>Contato</h2>
-                <p>Pedimos encarecidamente que dêem preferência pelo contato via whatsapp <a class="dentro" href="https://api.whatsapp.com/send?1=pt_BR&phone=5571987786846" target="_blank">71 98778-6846&#x1F517</a></p>
+                <p>Pedimos encarecidamente que dêem preferência pelo contato via whatsapp <a class="wpp" href="https://api.whatsapp.com/send?1=pt_BR&phone=5571987786846" target="_blank">71 98778-6846&#x1F517</a></p>
             </aside>
         </article>
     </main>
