--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <br>
             <hr>
 
-            <div class="txt">
+            <div class="list">
                 <h2>Serviços Oferecidos</h2>
                 <br>
                 <ul>
