--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </article>
     </main>
     <footer>
-        <p>Site Desenvolvido por Renan Clemonini</p>
+        <p>Site Desenvolvido por Clemonini Representações&reg;</p>
     </footer>
 </body>
 </html>
