--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@
     <footer>
         <p>Site Desenvolvido por Clemonini Representações&reg;</p>
     </footer>
+    <script src="index.js"></script>
 </body>
 </html>
