alteração no endereço

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <div class="txt">
                 <h2>Localização</h2>
-                <p>Estamos localizados na Avenida Praia de Itapuã, 276 no Mini Shopping 'Lumiar Work Center', na sala 4B (HarmonPelle):</p>
+                <p>Estamos localizados no Evo Empresarial - 6º Andar Sala 37:</p>
             </div>
 
             <div class="map">
