--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marília Di Credico</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/mobile-first.css">
     <link rel="stylesheet" href="css/general.css">
-    <script src="index.js"></script>
+    <script src="./js/index.js"></script>
+    <title>Marília Di Credico - Home</title>
 </head>
 <body onresize="mudouTamanho()">
     <header id="container">
@@ -20,10 +20,10 @@
     </span>
     <menu id="itensMenu">
         <ul>
-            <li><a href="#">Administração</a></li>
+            <li><a href="adm.html" target="_self">Administração</a></li>
             <li><a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank">Instagram</a></li>
-            <li><a href="#">Micropigmentação</a></li>
-            <li><a href="#">Produtos</a></li>
+            <li><a href="micropig.html" target="_self">Micropigmentação</a></li>
+            <li><a href="produtos.html" target="_self">Produtos</a></li>
         </ul>
     </menu>
     <main>
