--- a/produtos.html
+++ b/produtos.html
@@ -32,18 +32,36 @@
             <div id="caixaMaior">
 
                 <div id="caixaProduto" class="primeiroProduto">
-                    <h5>Óleo de Girassol - Farmax</h5>
-                    <img class="imagem" src="imagens/oleoGirassol.png" alt="oleoGirassol">
-                    <p>R$ 15,00</p>
-                    <p><a href="#">Comprar</a></p>
+                    <h5 class="h5Primeiro">Óleo de Girassol - Farmax</h5>
+
+                    <div id="produtoDescricao">
+                        <img class="imagem" src="imagens/oleoGirassol.png" alt="oleoGirassol">
+                        <div id="descricao">
+                            <p>Este óleo irá auxiliar no processo de cicatrização da micropigmentação</p>
+                            <p class="preco">R$ 15,00</p>
+                        </div>
+                    </div>
+
+                    <p class="pDoPrimeiroProduto"><a href="#">Comprar</a></p>
                 </div>
-                <hr id="linhaHorizontal">
-                <div id="caixaProduto">
+
+                <hr>
+
+                <div id="caixaProduto" class="primeiroProduto">
                     <h5>Óleo de Ricino - Farmax</h5>
-                    <img class="imagem" src="imagens/oleoRicino.png" alt="oleoRicino">
-                    <p>R$ 15,00</p>
+
+                    <div id="produtoDescricao">
+                        <img class="imagem" src="imagens/oleoRicino.png" alt="oleoRicino">
+                        <div id="descricao">
+                            <p>Este óleo irá auxiliar no processo de crescimento dos fios</p>
+                            <p class="preco">R$ 13,00</p>
+                        </div>
+                    </div>
+
                     <p><a href="#">Comprar</a></p>
                 </div>
+
+               
 
             </div>
         </article>
