ajuste no campo micropigmentação

--- a/micropig.html
+++ b/micropig.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/adm.css">
     <script src="./js/index.js"></script>
-    <title>Marília Di Credico - Administração</title>
+    <title>Marília Di Credico - Micropigmentação</title>
 </head>
 <body onresize="mudouTamanho()">
     <header id="container">
@@ -22,8 +22,8 @@
     <menu id="itensMenu">
         <ul>
             <li><a href="index.html" target="_self">Home</a></li>
+            <li><a href="adm.html">Administração</a></li>
             <li><a href="https://www.instagram.com/mariliadicredico.bioestetica/" target="_blank">Instagram</a></li>
-            <li><a href="micropig.html">Micropigmentação</a></li>
             <li><a href="produtos.html">Produtos</a></li>
         </ul>
     </menu>
